--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "Video Generator POC",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "Arun",
   "license": "ISC",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.0.13",
     "canvas": "^2.11.0",
     "express": "^4.18.2",
     "ffmpeg-static": "^5.1.0",
-    "@ffmpeg-installer/ffmpeg": "^1.0.13",
-    "fluent-ffmpeg": "^2.1.2"
+    "fluent-ffmpeg": "^2.1.2",
+    "nodemon": "^2.0.20"
   }
 }
