favicon and site title

--- a/webApp/public/manifest.json
+++ b/webApp/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Petronas",
+  "name": "Petronas AI Video",
   "icons": [
     {
       "src": "favicon.ico",
