File served after creation of file

--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "ffmpeg-static": "^5.1.0",
     "fluent-ffmpeg": "^2.1.2",
     "nodemon": "^2.0.20",
-    "openai": "^3.1.0"
+    "openai": "^3.1.0",
+    "short-uuid": "^4.2.2"
   }
 }
